--- a/src/FileList.css
+++ b/src/FileList.css
@@ -1,9 +1,25 @@
-.FileList .list {
+.FileList {
+  width: 100%;
+  height: auto;
+  min-height: 2rem;
   max-height: 25vh;
+}
+
+.FileList .list,
+.FileList .loading,
+.FileList .error {
   overflow-y: scroll;
   padding: 1rem;
+}
+
+.FileList .list {
+  width: 100%;
+  height: auto;
+  min-height: 2rem;
+  max-height: 25vh;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-auto-rows: min-content;
   column-gap: 1rem;
   row-gap: 0.4rem;
 }
@@ -13,5 +29,32 @@
   color: white;
   background-color: #aaf;
   border: 1px solid skyblue;
+  border-radius: 0.4rem;
+  cursor: pointer;
+}
+
+.FileList .list button {
+  padding: 0.4rem;
+  color: #269;
+  background-color: #fefefe;
+  border: 1px solid #aaa;
+  border-radius: 0.4rem;
+  cursor: pointer;
+}
+
+.FileList .loading {
+  width: 80%;
+  margin: 0.4rem auto;
+  color: #444;
+  font-weight: 100;
+}
+
+.FileList .error {
+  width: 80%;
+  margin: 0.4rem auto;
+  color: red;
+  font-weight: 200;
+  background-color: pink;
+  border: 2px solid red;
   border-radius: 0.4rem;
 }
